[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ikuuu-auto-checkin"
version = "1.0.0"
description = "ikuuu 自动签到工具 - 纯 Cookie 版"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "viceren", email = "viceren@example.com"}
]
keywords = ["ikuuu", "checkin", "auto-checkin", "签到"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.28.0,<3.0",
    "playwright>=1.40.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "types-requests>=2.31.0",
]
test = [
    "pytest>=8.0.0,<9.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]

[project.scripts]
ikuuu-checkin = "checkin:main"
ikuuu-refresh = "refresh_cookie:refresh_cookie"

[project.urls]
Homepage = "https://github.com/viceren/ikuuu-auto-checkin"
Repository = "https://github.com/viceren/ikuuu-auto-checkin"
Issues = "https://github.com/viceren/ikuuu-auto-checkin/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.ruff]
target-version = "py310"
line-length = 100
indent-style = "space"
quote-style = "double"
lint.select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "PTH", # flake8-use-pathlib
    "TRY", # tryceratops
    "ARG", # flake8-unused-arguments
    "ANN", # flake8-annotations (type hints)
]
lint.ignore = [
    "ANN101", # missing self type annotation
    "ANN102", # missing cls type annotation
    "ARG001", # unused function argument
    "ARG002", # unused method argument
    "B008",   # do not perform function calls in argument defaults
    "C408",   # unnecessary list comprehension
    "PTH118", # os.path.join -> pathlib
    "TRY003", # avoid specifying long messages outside the exception class
    "TRY004", # prefer 'raise' from 'raise ... from'
]
lint.pydocstyle.convention = "google"

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
ignore_missing_imports = false
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "checkin"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --strict-config"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]